fixed chores index card hiding behind bottom nav & checkmark alignment

--- a/app/assets/stylesheets/components/_my_expenses.scss
+++ b/app/assets/stylesheets/components/_my_expenses.scss
@@ -1,6 +1,7 @@
 .my-expenses {
-  margin-bottom: 250px;
   margin-top: auto;
   margin-left: auto;
   margin-right: auto;
+  max-height: 600px;
+  height: 600px;
 }
